Style: Update Dockerfile syntax for consistency across applications (#1326)
Changed the `as` keyword to `AS` in multiple Dockerfiles to maintain
uniformity in the base image declaration across various applications.

It addresses warnings like the following:

```
 - FromAsCasing: 'as' and 'FROM' keywords' casing do not match
```

<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **Style**
* Standardized Dockerfile instruction casing and formatting across
applications.
  * Updated SPDX copyright year ranges for affected container metadata.

* **Chores**
* Normalized multi-stage build aliases and stage naming for consistency.
* Minor build-script and packaging adjustments consolidated for
maintainability.

<sub>✏️ Tip: You can customize this high-level summary in your review
settings.</sub>
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Signed-off-by: JC Fillion-Robin <jcfr@nvidia.com>
Co-authored-by: Bruce Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/applications/nvidia_nim/nvidia_nim_chat/Dockerfile
+++ b/applications/nvidia_nim/nvidia_nim_chat/Dockerfile
@@ -1,7 +1,7 @@
 
 # syntax=docker/dockerfile:1
 
-# SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2024-2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -23,7 +23,7 @@
 
 ARG BASE_IMAGE
 
-FROM ${BASE_IMAGE} as base
+FROM ${BASE_IMAGE} AS base
 
 ARG DEBIAN_FRONTEND=noninteractive
 
