--- a/applications/qt_video_replayer/Dockerfile
+++ b/applications/qt_video_replayer/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-# SPDX-FileCopyrightText: Copyright (c) 2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2023-2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -19,7 +19,7 @@ ARG BASE_IMAGE
 ARG GPU_TYPE
 
 # Pin to Holoscan 3.2 since application requires CUDA Driver 550+ for Holoscan 3.3+
-FROM nvcr.io/nvidia/clara-holoscan/holoscan:v3.2.0-dgpu as base
+FROM nvcr.io/nvidia/clara-holoscan/holoscan:v3.2.0-dgpu AS base
 
 ARG DEBIAN_FRONTEND=noninteractive
 
