--- a/applications/endoscopy_depth_estimation/Dockerfile
+++ b/applications/endoscopy_depth_estimation/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2025-2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,14 +16,14 @@
 # limitations under the License.
 
 ARG BASE_IMAGE
-FROM ${BASE_IMAGE} as base
+FROM ${BASE_IMAGE} AS base
 
 #############################################################
 # Install common dependencies via HoloHub CLI
 #############################################################
 ENV DEBIAN_FRONTEND=noninteractive
 
-FROM base as holohub-setup
+FROM base AS holohub-setup
 RUN mkdir -p /tmp/scripts
 COPY holohub /tmp/scripts/
 RUN mkdir -p /tmp/scripts/utilities
@@ -34,7 +34,7 @@ RUN /tmp/scripts/holohub setup && rm -rf /var/lib/apt/lists/*
 #############################################################
 # Install Runtime Dependencies
 #############################################################
-FROM holohub-setup as run
+FROM holohub-setup AS run
 
 RUN apt-get update && apt-get install -y build-essential cmake git \
     libgtk2.0-dev pkg-config libavcodec-dev libavformat-dev libswscale-dev \
