[NEW APP] BCI Visualization with Kernel Flow2 and Real-Time Volume Rendering (#1322)
This PR introduces a non-invasive BCI visualization application,
developed in collaboration with Kernel, that reconstructs and renders
HbO activities of a 3D brain in real time.
## What’s included
1. Kernel reconstruction pipeline: end-to-end processing from fNIRS
moments input to reconstructed HbO volumes.
2. Converts the reconstructed HbO output into the format required by the
volume renderer.
3. Volume renderer enhancements: enables streaming and multithreaded
execution, adds CUDA stream handling, and includes several bug fixes
identified during integration.

### TODO
1. Add a more detailed README (Kernel Flow2, fNIRS, and pipeline
overview).
2. Refactor and consolidate data inputs and upload datasets to cloud.

<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **New Features**
* New real-time BCI app: SNIRF NIRS streaming, GPU-accelerated
reconstruction, voxel→volume resampling, and interactive 3D volume
rendering with camera feedback.
* Docker support, application manifest/metadata, and pinned Python
requirements for reproducible runs.

* **Improvements**
* Volume renderer: CUDA stream integration, camera-pose caching, and
reduced busy-waiting for smoother rendering.
* Added color-buffer passthrough and Python bindings to avoid rendering
bottlenecks.

* **Documentation**
* Detailed README, example configs, and runtime/config files for setup
and transfer-function tuning.

<sub>✏️ Tip: You can customize this high-level summary in your review
settings.</sub>
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Signed-off-by: Mimi Liao <mimil@nvidia.com>
Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>
Signed-off-by: Bruce Hashemian <3968947+bhashemian@users.noreply.github.com>
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>
Co-authored-by: Gabe Lerner <gabe.lerner@kernel.c

--- a/applications/bci_visualization/Dockerfile
+++ b/applications/bci_visualization/Dockerfile
@@ -1,4 +1,6 @@
-# SPDX-FileCopyrightText: Copyright (c) 2023-2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# syntax=docker/dockerfile:1
+
+# SPDX-FileCopyrightText: Copyright (c) 2025-2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,9 +15,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-include(pybind11_add_holohub_module)
-pybind11_add_holohub_module(
-    CPP_CMAKE_TARGET volume_renderer
-    CLASS_NAME "VolumeRendererOp"
-    SOURCES volume_renderer.cpp
-)
+
+ARG BASE_IMAGE
+FROM ${BASE_IMAGE} AS base
+
+ARG DEBIAN_FRONTEND=noninteractive
+
+# Install curl for downloading data files
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
+ENV HOLOSCAN_INPUT_PATH=/workspace/holohub/data/bci_visualization
+
+# Install Python dependencies
+COPY applications/bci_visualization/requirements.txt /tmp/requirements.txt
+RUN pip install -r /tmp/requirements.txt --no-cache-dir
+    
