--- a/applications/ultrasound_postprocessing/pyproject.toml
+++ b/applications/ultrasound_postprocessing/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "us-post-processing"
 version = "0.1.0"
-description = "Add your description here"
+description = "Tools to design and deploy ultrasound post-processing filters with Holoscan SDK"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
