UCXX Endoscopy Tool Tracking demo updates
- Rename `subscribe_overlay` to `overlay` to minimize confusion. The
  overlay application acts as both a subscriber and a publisher.
- Rename `DropEntityOp` to `SinkOp` for consistency with other projects
- Organize YAML configuration by application
- Document Holoscan SDK 3.10.0 tested version
- Update README with sample image and streamlined containerized commands
- Fix linting

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/distributed/ucxx_endoscopy_tool_tracking/cpp/CMakeLists.txt
+++ b/applications/distributed/ucxx_endoscopy_tool_tracking/cpp/CMakeLists.txt
@@ -25,7 +25,7 @@ add_executable(ucxx_endoscopy_tool_tracking
     main.cpp
     publisher.cpp
     subscriber_holoviz.cpp
-    subscriber_overlay.cpp
+    overlay.cpp
 )
 
 target_include_directories(ucxx_endoscopy_tool_tracking
