--- a/applications/distributed/ucxx_endoscopy_tool_tracking/cpp/ucxx_endoscopy_tool_tracking.yaml
+++ b/applications/distributed/ucxx_endoscopy_tool_tracking/cpp/ucxx_endoscopy_tool_tracking.yaml
@@ -30,7 +30,35 @@ resources:
 extensions:
   - lib/gxf_extensions/libgxf_lstm_tensor_rt_inference.so
 
-record_type: "none"   # "none" or "subscriber" - enables recording of received frames on subscriber side
+overlay:
+  # Controls if the overlay node opens a Holoviz UI for visualization.
+  visualize: false
+  holoviz:
+    tensors:
+      - name: ""
+        type: color
+        opacity: 1.0
+        priority: 0
+    headless: false
+
+subscriber_holoviz:
+  record_type: "none"   # "none" or "subscriber" - enables recording of received frames on subscriber side
+
+  holoviz:
+    tensors:
+      - name: ""
+        type: color
+        opacity: 1.0
+        priority: 0
+    headless: false
+
+  recorder_format_converter:
+    in_dtype: "rgba8888"
+    out_dtype: "rgb888"
+
+  recorder_subscriber:
+    directory: "/tmp"
+    basename: "ucxx_subscriber_received"
 
 publisher:
   # Controls whether the publisher's UCXX sender blocks the pipeline until a subscriber connects.
@@ -38,107 +66,78 @@ publisher:
   # - false: non-blocking; drop outgoing frames until connected
   blocking: false
 
-subscriber_overlay:
-  # Controls if the subscriber_overlay node opens a Holoviz UI for visualization.
-  visualize: false
+  replayer:
+    basename: "surgical_video"
+    frame_rate: 0   # as specified in timestamps
+    repeat: true    # default: false
+    realtime: true  # default: true
+    count: 0        # default: 0 (no frame count restriction)
 
-replayer:
-  basename: "surgical_video"
-  frame_rate: 0   # as specified in timestamps
-  repeat: true    # default: false
-  realtime: true  # default: true
-  count: 0        # default: 0 (no frame count restriction)
+  format_converter:
+    out_tensor_name: source_video
+    out_dtype: "float32"
+    scale_min: 0.0
+    scale_max: 255.0
 
-format_converter:
-  out_tensor_name: source_video
-  out_dtype: "float32"
-  scale_min: 0.0
-  scale_max: 255.0
+  lstm_inference:
+    input_tensor_names:
+      - source_video
+      - cellstate_in
+      - hiddenstate_in
+    input_state_tensor_names:
+      - cellstate_in
+      - hiddenstate_in
+    input_binding_names:
+      - data_ph:0 # (shape=[1, 480, 854, 3], dtype=float32) <==> source_video
+      - cellstate_ph:0 # (shape=[1, 60, 107, 7], dtype=float32) == internal state
+      - hiddenstate_ph:0 # (shape=[1, 60, 107, 7], dtype=float32) == internal state
+    output_tensor_names:
+      - cellstate_out
+      - hiddenstate_out
+      - probs
+      - scaled_coords
+      - binary_masks
+    output_state_tensor_names:
+      - cellstate_out
+      - hiddenstate_out
+    output_binding_names:
+      - Model/net_states:0 # (shape=[ 1, 60, 107, 7], dtype=float32)
+      - Model/net_hidden:0 # (shape=[ 1, 60, 107, 7], dtype=float32)
+      - probs:0 # (shape=[1, 7], dtype=float32)
+      - Localize/scaled_coords:0 # (shape=[1, 7, 2], dtype=float32)
+      - Localize_1/binary_masks:0 # (shape=[1, 7, 60, 107], dtype=float32)
+    force_engine_update: false
+    verbose: true
+    max_workspace_size: 2147483648
+    enable_fp16_: true
 
-lstm_inference:
-  input_tensor_names:
-    - source_video
-    - cellstate_in
-    - hiddenstate_in
-  input_state_tensor_names:
-    - cellstate_in
-    - hiddenstate_in
-  input_binding_names:
-    - data_ph:0 # (shape=[1, 480, 854, 3], dtype=float32) <==> source_video
-    - cellstate_ph:0 # (shape=[1, 60, 107, 7], dtype=float32) == internal state
-    - hiddenstate_ph:0 # (shape=[1, 60, 107, 7], dtype=float32) == internal state
-  output_tensor_names:
-    - cellstate_out
-    - hiddenstate_out
-    - probs
-    - scaled_coords
-    - binary_masks
-  output_state_tensor_names:
-    - cellstate_out
-    - hiddenstate_out
-  output_binding_names:
-    - Model/net_states:0 # (shape=[ 1, 60, 107, 7], dtype=float32)
-    - Model/net_hidden:0 # (shape=[ 1, 60, 107, 7], dtype=float32)
-    - probs:0 # (shape=[1, 7], dtype=float32)
-    - Localize/scaled_coords:0 # (shape=[1, 7, 2], dtype=float32)
-    - Localize_1/binary_masks:0 # (shape=[1, 7, 60, 107], dtype=float32)
-  force_engine_update: false
-  verbose: true
-  max_workspace_size: 2147483648
-  enable_fp16_: true
-
-holoviz:
-  tensors:
-    - name: ""
-      type: color
-      opacity: 1.0
-      priority: 0
-    - name: mask
-      type: color
-      opacity: 1.0
-      priority: 1
-    - name: scaled_coords
-      type: crosses
-      opacity: 1.0
-      line_width: 4
-      color: [1.0, 0.0, 0.0, 1.0]
-      priority: 2
-    - name: scaled_coords
-      type: text
-      opacity: 1.0
-      priority: 3
-      color: [1.0, 1.0, 1.0, 0.9]
-      text:
-        - Grasper
-        - Bipolar
-        - Hook
-        - Scissors
-        - Clipper
-        - Irrigator
-        - Spec.Bag
-  headless: false
-
-holoviz_subscriber_holoviz:
-  tensors:
-    - name: ""
-      type: color
-      opacity: 1.0
-      priority: 0
-  headless: false
-
-holoviz_subscriber_overlay:
-  tensors:
-    - name: ""
-      type: color
-      opacity: 1.0
-      priority: 0
-  headless: false
-
-recorder_format_converter:
-  in_dtype: "rgba8888"
-  out_dtype: "rgb888"
-
-recorder_subscriber:
-  directory: "/tmp"
-  basename: "ucxx_subscriber_received"
-
+  holoviz:
+    tensors:
+      - name: ""
+        type: color
+        opacity: 1.0
+        priority: 0
+      - name: mask
+        type: color
+        opacity: 1.0
+        priority: 1
+      - name: scaled_coords
+        type: crosses
+        opacity: 1.0
+        line_width: 4
+        color: [1.0, 0.0, 0.0, 1.0]
+        priority: 2
+      - name: scaled_coords
+        type: text
+        opacity: 1.0
+        priority: 3
+        color: [1.0, 1.0, 1.0, 0.9]
+        text:
+          - Grasper
+          - Bipolar
+          - Hook
+          - Scissors
+          - Clipper
+          - Irrigator
+          - Spec.Bag
+    headless: false
