--- a/applications/distributed/ucxx_endoscopy_tool_tracking/CMakeLists.txt
+++ b/applications/distributed/ucxx_endoscopy_tool_tracking/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2025 Holoscan Team
+# SPDX-FileCopyrightText: Copyright (c) 2025-2026, Holoscan Team
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
