App: Add find_package(holoscan) to CMakeLists.txt of Python-only apps
Add `find_package(holoscan)` to Python-only applications that were
missing it. This silences the CMake warning "Manually-specified
variables were not used by the project: CMAKE_CUDA_COMPILER" that
occurs when CI passes `-DCMAKE_CUDA_COMPILER` to apps using
`project(NONE)`.

The holoscan package uses `rapids_export()` with `LANGUAGES C CXX CUDA`,
which enables these languages and consumes `CMAKE_CUDA_COMPILER` when
the package is found.

Applications updated:
- `colonoscopy_segmentation`
- `holochat`
- `isaac_sim_holoscan_bridge`
- `polyp_detection`
- `simple_radar_pipeline` (Python build path only)

Signed-off-by: Jean-Christophe Fillion-Robin <jcfr@nvidia.com>

--- a/applications/colonoscopy_segmentation/CMakeLists.txt
+++ b/applications/colonoscopy_segmentation/CMakeLists.txt
@@ -15,6 +15,11 @@
 
 project(ColonoscopySegmentation NONE)
 
+# Find holoscan to ensure CMAKE_CUDA_COMPILER is consumed (silences CMake warning
+# about unused variable for Python-only apps with project(NONE))
+find_package(holoscan 1.0 REQUIRED CONFIG
+             PATHS "/opt/nvidia/holoscan" "/workspace/holoscan-sdk/install")
+
 # Default to download datasets
 option(HOLOHUB_DOWNLOAD_DATASETS "Download datasets" ON)
 
