fix AJA dependency
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -84,7 +84,8 @@ add_holohub_application(iio DEPENDS OPERATORS iio_controller fft)
 
 add_subdirectory(laser_detection_latency)
 
-add_holohub_application(monai_endoscopic_tool_seg DEPENDS OPERATORS aja_source)
+add_holohub_application(monai_endoscopic_tool_seg DEPENDS
+                        OPERATORS OPTIONAL aja_source)
 add_holohub_application(multiai_endoscopy DEPENDS
                         OPERATORS OPTIONAL aja_source)
 add_holohub_application(multiai_ultrasound DEPENDS
