Pin ONNX version for Yolo Model Deployment
Signed-off-by: Julien Jomier <jjomier@nvidia.com>

--- a/applications/yolo_model_deployment/Dockerfile
+++ b/applications/yolo_model_deployment/Dockerfile
@@ -46,7 +46,7 @@ RUN apt-get update \
 
 RUN pip3 install \
     ultralytics \
-    onnx \
+    onnx==1.19.1 \
     onnx-graphsurgeon
 
 ARG GPU_TYPE
