--- a/applications/object_detection_torch/Dockerfile
+++ b/applications/object_detection_torch/Dockerfile
@@ -42,7 +42,15 @@ FROM base AS torch
 
 # Install libraries
 ARG GPU_TYPE
-RUN if [ "${GPU_TYPE}" = "igpu" ]; then \
+RUN set -eux; \
+    if [ "${GPU_TYPE}" = "igpu" ]; then \
+        # Install cuDNN for PyTorch
+        # Some cuDNN libraries have been intentionally removed from the base image, so we need to reinstall them
+        apt-get update && \
+        apt-get install -y --reinstall --no-install-recommends \
+            libcudnn9-cuda-12 \
+            libcudnn9-dev-cuda-12 && \
+        rm -rf /var/lib/apt/lists/* && \
         PYTORCH_WHEEL_VERSION="2.8.0"; \
         TORCHVISION_WHEEL_VERSION="0.23.0"; \
         INDEX_URL="https://pypi.jetson-ai-lab.io/jp6/cu129"; \
@@ -54,7 +62,7 @@ RUN if [ "${GPU_TYPE}" = "igpu" ]; then \
             exit 1; \
         else \
             PYTORCH_WHEEL_VERSION="2.8.0+cu129"; \
-            TORCHVISION_WHEEL_VERSION="0.23.0+cu129"; \
+            TORCHVISION_WHEEL_VERSION="0.23.0"; \
             INDEX_URL="https://download.pytorch.org/whl/"; \
         fi; \
     fi; \
