--- a/applications/object_detection_torch/Dockerfile
+++ b/applications/object_detection_torch/Dockerfile
@@ -32,6 +32,10 @@ RUN chmod +x /tmp/scripts/holohub
 RUN /tmp/scripts/holohub setup && rm -rf /var/lib/apt/lists/*
 
 # Set up Holoscan SDK container libtorch to be found with ldconfig for app C++ build and runtime
+# Verify PyTorch is available in base image
+RUN python3 -c "import torch; print(f'PyTorch {torch.__version__} found')"
+
+# Set up Holoscan SDK container libtorch to be found with ldconfig for app C++ build and runtime
 RUN echo $(python3 -c "import torch; print(torch.__path__[0])")/lib > /etc/ld.so.conf.d/libtorch.conf \
     && ldconfig \
     && ldconfig -p | grep -q "libtorch.so"
