Pinning version of torchvision to keep the installed version of torch

--- a/applications/object_detection_torch/Dockerfile
+++ b/applications/object_detection_torch/Dockerfile
@@ -52,4 +52,14 @@ RUN INDEX_URL=""; \
     else \
         echo "Error: Unsupported GPU_TYPE (${GPU_TYPE}) or CUDA_MAJOR (${CUDA_MAJOR})" && exit 1; \
     fi \
-    && python3 -m pip install torchvision --no-cache-dir --index-url ${INDEX_URL}
+    && TORCH_VERSION=$(python3 -c "import torch; print(torch.__version__.split('+')[0])") \
+    && echo "Detected PyTorch version: ${TORCH_VERSION}" \
+    && if [ "${TORCH_VERSION}" = "2.8.0" ]; then \
+        TORCHVISION_VERSION="0.23.0"; \
+    else \
+        TORCHVISION_VERSION="0.24.1"; \
+    fi \
+    && echo "Installing torchvision ${TORCHVISION_VERSION}" \
+    && python3 -m pip install torchvision==${TORCHVISION_VERSION} --no-cache-dir --index-url ${INDEX_URL}
+
+    
