Op: Implement GPU zero-copy for UCX send/recieve.
Addition to ucxx-demo PR with zero copy

- Implement zero-copy, leveraging UCX to send device or host pointer directly
without explicit staging. Receiver can set receive_on_device flag to indicate
receiving on device or host.
- Using an out-of-band socket connection and worker-address-based endpoint
creation to enable UCX automatic lane selection.
- Sender sends tensor header (always host) and data (host or device, up to UCX
auto-select) asynchronously using different tags. Receiver receives
asynchronously using different tags.
- Pin sender side in_message entity with keep-alive to avoid resource
deallocation before UCX progress thread finishes send. Cap sender side
keep-alive length with a max_in_flight arg to relax sender side memory pressure.
- Remove a couple of FormatConverters in the publisher app: remove
render_buffer_converter from publisher (added header serialization for
VideoBuffer - aka receiver can receive VideoBuffer directly); remove
source_to_ucxx from publisher - not needed when receiver can receive VideoBuffer.

co-authored-by: Connor Smith <cosmith@nvidia.com>
Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/distributed/ucxx_endoscopy_tool_tracking/cpp/ucxx_endoscopy_tool_tracking.yaml
+++ b/applications/distributed/ucxx_endoscopy_tool_tracking/cpp/ucxx_endoscopy_tool_tracking.yaml
@@ -56,7 +56,7 @@ subscriber_holoviz:
     in_dtype: "rgba8888"
     out_dtype: "rgb888"
 
-  recorder_subscriber:
+  recorder:
     directory: "/tmp"
     basename: "ucxx_subscriber_received"
 
