refactor(gstreamer): Improve holo_to_gst app and shared GStreamer wrappers
This commit enhances the holo_to_gst application and improves the shared
GStreamer C++ wrapper library that all GStreamer applications use.

Changes to holo_to_gst application:
- Refactor argument parsing using new shared arg_parser.hpp
- Rename pipeline element from 'first' to 'src' for better semantics
- Update README with improved documentation and fixed file paths
- Update metadata.json with corrected pipeline element names
- Fix install_deps.sh path reference in documentation

Shared GStreamer wrapper improvements:
- Add wrapper_base.hpp as base class for all GStreamer wrappers
- Refactor gst::Sample wrapper (renamed from app_src.cpp to sample.cpp)
- Improve error handling and memory management in wrapper classes
- Enhance gst::Caps, gst::Message, and gst::Element wrappers
- Add move semantics to gst wrappers for better performance
- Improve gst_pipeline_bus_monitor for better lifecycle management

Changes to gst_video_recorder:
- Adopt shared arg_parser.hpp for consistent argument handling

These improvements provide a solid foundation for the upcoming
gst_to_holo application and improve code reuse across all GStreamer apps.

Signed-off-by: Gil Shapira <gshapira@nvidia.com>

--- a/operators/gstreamer/CMakeLists.txt
+++ b/operators/gstreamer/CMakeLists.txt
@@ -32,11 +32,11 @@ pkg_check_modules(GSTREAMER_APP REQUIRED gstreamer-app-1.0)
 
 # Create the Holoscan GStreamer Bridge library
 add_library(holoscan_gstreamer_bridge SHARED
-  gst/app_src.cpp
   gst/buffer.cpp
   gst/caps.cpp
   gst/memory.cpp
   gst/message.cpp
+  gst/sample.cpp
   gst/video_info.cpp
   gst_src_bridge.cpp
   gst_src_op.cpp
@@ -133,6 +133,7 @@ install(FILES
   gst/object.hpp
   gst/pad.hpp
   gst/pipeline.hpp
+  gst/sample.hpp
   gst/video_info.hpp
   gst_src_bridge.hpp
   gst_src_op.hpp
