--- a/operators/gstreamer/CMakeLists.txt
+++ b/operators/gstreamer/CMakeLists.txt
@@ -38,6 +38,9 @@ add_library(holoscan_gstreamer_bridge SHARED
   gst/message.cpp
   gst/sample.cpp
   gst/video_info.cpp
+  gst_sink_bridge.cpp
+  gst_sink_op.cpp
+  gst_sink_resource.cpp
   gst_src_bridge.cpp
   gst_src_op.cpp
   gst_src_resource.cpp
@@ -119,6 +122,7 @@ install(TARGETS holoscan_gstreamer_bridge DESTINATION lib)
 # Install headers
 install(FILES
   gst/allocator.hpp
+  gst/app_sink.hpp
   gst/app_src.hpp
   gst/buffer.hpp
   gst/bus.hpp
@@ -135,11 +139,15 @@ install(FILES
   gst/pipeline.hpp
   gst/sample.hpp
   gst/video_info.hpp
+  gst_sink_bridge.hpp
+  gst_sink_resource.hpp
+  gst_sink_op.hpp
   gst_src_bridge.hpp
   gst_src_op.hpp
   gst_src_resource.hpp
   gst_video_recorder_op.hpp
   gst_pipeline_bus_monitor.hpp
+  gst_wait_group.hpp
   DESTINATION include/holoscan/operators/gstreamer)
 
 # Export the library for use by other CMake projects
