ignore ai coding config files
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,10 @@ ngc-cli/
 CTestConfig.cmake
 .ngc
 
+# AI coding assistants
+.cursor/
+CLAUDE.md
+
 # Cache and temporary directories
 .cache/
 .cargo/
